--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   --text-primary: #000;
   --bgPrimary: #fff;
   --bgSecondary: #f9f9f9;
-  --pink: #0071bd;
-  --light-blue: #e6f7ff;
+  --pink: #026bb1;
+  --light-blue: #fcfeff;
   --border: #d9d9d9;
 }
 
@@ -313,7 +313,8 @@ a:hover {
   justify-content: space-between;
 }
 .provider-name {
-  margin-left: 10px;
+  margin-left: 5px;
+  font-size: 12px;
 }
 
 .chart-header {
